syntax = "proto3";
package common;
option go_package = "vgproj/proto/common";

message PlayerBrief {
    int64 player_id = 1;
    string name = 2;
    int32 head = 3;
}

message PlayerDetail {
    
}
